<resources>
    <string name="app_name">Recycler View Java</string>
    <string name="txt_btn_submit">Submit Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_product">Product</string>
    <string name="txt_price">Price</string>
    <string name="txt_description">Description</string>
    <string name="txt_variant">Variant</string>
    <string name="txt_hint_product">Input Nama Produk</string>
    <string name="txt_hint_price">Input Harga Produk</string>
    <string name="txt_hint_desc">Input Deskripsi Produk</string>
    <string name="txt_hint_variant">Input Model Produk</string>
    <string name="txt_simpan">Simpan</string>
    <string name="txt_batal">Batal</string>
</resources>